# WhisperKitAndroid

./: .gitignore  CMakeLists.txt  ENVIRONMENT.json  Makefile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: pr-checks.yml
WhisperKit/src/: TranscribeTask.cpp  TranscribeTask.hpp  WhisperKit.cpp  WhisperKitConfiguration.cpp  WhisperKitConfiguration.hpp  WhisperKitPipeline.cpp  WhisperKitPipeline.hpp  WhisperKitTranscriptionResult.cpp
WhisperKit/src/Audio/: audio_input.cpp  audio_input.hpp
WhisperKit/src/Core/: DelegateInterface.cpp  DelegateInterface.hpp  backend_class.hpp  tflite_msg.hpp
WhisperKit/src/Models/: LiteRTModel.hpp  tflite_gpu_model.cpp  tflite_gpu_model.hpp  tflite_model.cpp  tflite_model.hpp  tflite_qnn_model.cpp  tflite_qnn_model.hpp
WhisperKit/src/Text/: post_proc.cpp  post_proc.hpp
WhisperKitAndroidCLI/: main.cpp
android/: .gitignore
android/config/: detekt.yml
android/examples/WhisperAX/: build.gradle.kts  google-services.json
android/examples/WhisperAX/src/main/: AndroidManifest.xml
android/examples/WhisperAX/src/main/java/com/argmaxinc/whisperax/: AudioDecoderCallbacks.kt  AudioRecorder.kt  ComputeUnitsView.kt  MainActivity.kt  MainScreenContentImpl.kt  ModelSelectorView.kt  PCMDecoder.kt  TranscribeScreen.kt  Typography.kt  WhisperAppTheme.kt  WhisperViewModel.kt
android/examples/WhisperAX/src/main/res/layout/: activity_main.xml
android/examples/WhisperAX/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
android/examples/WhisperAX/src/main/res/values-night/: colors.xml  themes.xml
android/whisperkit/: build.gradle.kts  detekt-baseline.xml
android/whisperkit/src/main/: AndroidManifest.xml
android/whisperkit/src/main/java/com/argmaxinc/whisperkit/: ExperimentalWhisperKit.kt  NativeTest.kt  WhisperKit.kt  WhisperKitException.kt  WhisperKitImpl.kt
android/whisperkit/src/main/java/com/argmaxinc/whisperkit/huggingface/: HuggingFaceApi.kt  HuggingFaceApiConfig.kt  HuggingFaceLogger.kt  KtorHuggingFaceApiImpl.kt  KtorHuggingFaceClient.kt  ModelInfo.kt  Repo.kt
android/whisperkit/src/main/java/com/argmaxinc/whisperkit/network/: ArgmaxModelDownloader.kt  ArgmaxModelDownloaderImpl.kt
android/whisperkit/src/main/java/com/argmaxinc/whisperkit/util/: MessageProcessor.kt  SegmentTextOnlyMessageProcessor.kt
android/whisperkit/src/test/java/com/argmaxinc/whisperkit/huggingface/: KtorHuggingFaceApiImplTest.kt
android/whisperkit/src/test/java/com/argmaxinc/whisperkit/network/: ArgmaxModelDownloaderImplTest.kt
android/whisperkit/src/test/java/com/argmaxinc/whisperkit/util/: SegmentTextOnlyMessageProcessorTest.kt
androidApp/: build.gradle  gradle.properties  local.properties
androidApp/app/: build.gradle
androidApp/app/src/main/: AndroidManifest.xml
androidApp/app/src/main/java/com/whispertflite/: MainActivity.kt  MainViewModel.kt  WhisperKitNative.java
androidApp/app/src/main/java/com/whispertflite/asr/: Recorder.java
cli/: audio_codec.cpp  audio_codec.hpp  whisperax_cli.cpp  whisperkit_cli.cpp  whisperkit_cli.h
cpp/: WhisperKit.h
cpp/src/: TranscribeTask.cpp  TranscribeTask.hpp  WhisperKit.cpp  WhisperKitConfiguration.cpp  WhisperKitConfiguration.hpp  WhisperKitPipeline.cpp  WhisperKitPipeline.hpp  WhisperKitTranscriptionResult.cpp  WhisperKitTranscriptionResult.hpp
cpp/src/Audio/: audio_input.cpp  audio_input.hpp
cpp/src/Core/: DelegateInterface.cpp  DelegateInterface.hpp  backend_class.hpp  tflite_msg.hpp
cpp/src/Models/: TextDecoder.cpp  TextDecoder.hpp  tflite_gpu_model.cpp  tflite_gpu_model.hpp  tflite_model.cpp  tflite_model.hpp  tflite_qnn_model.cpp  tflite_qnn_model.hpp
cpp/src/Text/: Tokenizer.cpp  Tokenizer.h  post_proc.cpp  post_proc.hpp
gpuv3/inc/ml_drift_delegate/: ml_drift_cl.h  ml_drift_delegate.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
inc/: TranscribeTask.h  WhisperKit.h  WhisperKitConfiguration.h  WhisperKitPipeline.h  WhisperKitTranscriptionResult.h  audio_input.hpp  backend_class.hpp  logcat.hpp  post_proc.hpp  tflite_gpu_model.hpp  tflite_model.hpp  tflite_msg.hpp  tflite_qnn_model.hpp  whisperax.hpp
jni/: NativeWhisperKit.cpp  whisperkit_jni.cpp  whisperkit_jni.h
scripts/: Dockerfile  adb_push.sh  adb_shell.sh  build.sh  build_SDL.sh  build_android_app.sh  build_ffmpeg.sh  build_tensorflow.sh  build_test.sh  build_tokenizers.sh  ci_cmd.sh  copy_libraries.sh  dev_env.sh  download_models.sh  run_on_android.sh
src/: TranscribeTask.cpp  WhisperKit.cpp  WhisperKitConfiguration.cpp  WhisperKitPipeline.cpp  audio_input.cpp  post_proc.cpp  tflite_gpu_model.cpp  tflite_model.cpp  tflite_qnn_model.cpp  tflite_runner.cpp  whisperax.cpp
src/WhisperKit/: TranscribeTask.cpp  WhisperKit.cpp  WhisperKitConfiguration.cpp  WhisperKitPipeline.cpp  WhisperKitTranscriptionResult.cpp  whisperax.cpp
src/WhisperKit/Models/: tflite_gpu_model.cpp  tflite_model.cpp  tflite_qnn_model.cpp
src/WhisperKit/Text/: post_proc.cpp
test/: ENVIRONMENT.json  README-test.md  android_test_utils.py  linux_test_utils.py  requirements.txt  test_build_all.sh  whisperkit_android_test.py  whisperkit_test.py
test/report.json/: output.json
